Changes for 1.1alpha5:

 - fixed support of negative values for SNMP integers (Alexei)
 - added support of functiona dayofweek() for triggers (Alexei)
 - configurable format of icon labels for maps (Alexei)
 - added column sysmaps.label_type (Alexei)
 - keep host selection when adding/deleting/updating item (Alexei)
 - fix for complation of the agent under Solaris (Alexei)
 - do not use hardcoded port 161 when adding from template (Alexei)
 - changed logic update host.available instead of host.status (Alexei)
 - added column hosts.available (Alexei)
 - added link to ZABBIX Manual v1.1 into page header (Alexei)
 - fixed evaluation of nodata(). Thanks to Igor Micko. (Alexei)
 - fixed time selection for custom graphs (Alexei)
 - configurable format of map output (png, jpg) (Alexei)
 - special processing of 'b' and 'bps' (bytes). Take 1000 for Kilos (Alexei)
 - fix of crash of zabbix_server when processing notification macros (Alexei)
 - added form for managing images (Alexei)
 - added frontends/image.php (Alexei)
 - added table 'hosts_templates' (Alexei)
 - added table 'escalations' (Alexei)
 - selection of configuration areas in config.php (Alexei)

Changes for 1.1alpha4:

 - fixed problem with blank graphs (Alexei)
 - support of plain text value for screens (Alexei)
 - fixed parsing of command line parameters. Thanks to Slix. (Alexei)
 - added special item zabbix[log] (Alexei)
 - calculate items.nextcheck as nextcheck+delay (Alexei)
 - fixed time navigation for user-defined graphs (Alexei)
 - added link to ZABBIX manual from all forms (Alexei)
 - icmppingsec to return '0' if cannot ping (Alexei)
 - added error reason for unsupported items (Alexei)
 - added error reason for unreachable hosts (Alexei)
 - added hosts.error (Alexei)
 - added items.error (Alexei)
 - added alerts.error (Alexei)
 - added error reason for undelivered alerts (Alexei)
 - added upgrades/dbpatches/1.1alpha3_to_1.1alpha4 (Alexei)
 - fixed empty macros in alert messages if '.' in key (Alexei)